test/correct/Reexport2.hs
module Reexport2(module Reexport2, Reexport3) where

import Reexport3

q = 4
