test/typeerrors/Examples/DeclPatBinding.hs
module DeclPatBinding where

(a,b) = True
